# AMRIT-VAYASYA

./: .clinerules  .gitignore  CONTRIBUTING.md  README.md
cross-repo/: .env.example  Dockerfile  README.md  __init__.py  api.py  config.py  mcp_server.py  requirements.txt
cross-repo/core/: __init__.py  evidence.py  evidence_collector.py  frontend_extractor.py  graph_builder.py  groq_orchestrator.py  neo4j_client.py  route_normalizer.py  (+1 more)
docs-mcp/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs-mcp/apps/api/: main.py
docs-mcp/apps/ingestion/: service.py
docs-mcp/apps/worker/: celery_app.py
docs-mcp/core/: config.py  models.py
docs-mcp/core/chunking/: semantic.py
docs-mcp/core/embeddings/: provider.py
docs-mcp/core/metadata/: enricher.py
docs-mcp/core/parsing/: document_parser.py  source_parser.py
docs-mcp/core/qdrant/: client.py
docs-mcp/core/reranking/: reranker.py
docs-mcp/core/retrieval/: bm25.py  hybrid.py
docs-mcp/docs/: architecture.md  chunking_strategy.md  contribution_guide.md  ingestion_pipeline.md  mcp_tools.md  retrieval_pipeline.md  setup.md  troubleshooting.md
docs-mcp/mcp/: server.py
docs-mcp/scripts/: ingest_local.py  query.py
docs-mcp/tests/: test_api.py  test_chunking.py  test_ingestion.py  test_parser.py  test_reranking.py  test_retrieval.py
docs-mcp/tests/fixtures/sample_repo/: README.md  app.py
jira-mcp/: .env.example  README.md  api.py  config.py  mcp_server.py  requirements.txt
standards/: README.md  angular.yml  spring-boot.yml
(+10 files in other folders)
