[project]
name = "docs-mcp"
version = "0.1.0"
description = "Production-grade local Docs MCP server for documentation ingestion and hybrid retrieval"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "fastmcp>=0.2.0",
  "qdrant-client>=1.9.0",
  "redis>=5.0.0",
  "celery>=5.3.6",
  "GitPython>=3.1.43",
  "rank-bm25>=0.2.2",
  "beautifulsoup4>=4.12.3",
  "markdown-it-py>=3.0.0",
  "sentence-transformers>=2.7.0",
  "transformers>=4.41.0",
  "torch>=2.2.0",
  "tree-sitter>=0.21.3",
  "tree-sitter-languages>=1.10.2",
  "docling>=2.0.0",
  "pypdf>=4.2.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.7", "httpx>=0.27.0", "ruff>=0.5.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
